--- a/student-life.html
+++ b/student-life.html
@@ -168,9 +168,6 @@
                                     <a href="student-life.html">Student Life</a>
                                  </li>
                                  <li>
-                                    <a href="news-events.html">News & Events</a>
-                                 </li>
-                                 <li>
                                     <a href="contact.html">Contact</a>
                                  </li>
                               </ul>
@@ -181,10 +178,11 @@
                      <div class="col-xxl-3 col-xl-3 col-lg-2 col-md-6 col-6">
                         <div class="tp-header__main-right d-flex justify-content-end align-items-center w-100">
                            <div class="tp-header__search d-none d-lg-block w-100">
-                              <form class="d-flex align-items-center w-100">
-                                 <input type="text" placeholder="Search..." class="form-control" style="flex: 1; width: auto;">
+                              <form class="d-flex align-items-center w-100" id="header-search-form">
+                                 <input type="text" id="header-search-input" placeholder="Search..." class="form-control" style="flex: 1; width: auto;" autocomplete="off">
                                  <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
                               </form>
+                              <div id="search-results" class="search-results-dropdown" style="display: none;"></div>
                            </div>
                            <div class="tp-header__hamburger ml-50 d-lg-none">
                               <button class="hamburger-btn offcanvas-open-btn">
@@ -250,14 +248,13 @@
    <!-- offcanvas area end -->
 
    <main>
-      <section class="page-banner">
-         <div class="container">
+      <section class="page-banner" style="background-image: url('./assets/images/Sportsteam.png'); background-size: cover; background-position: center; background-repeat: no-repeat; position: relative;">
+         <div class="page-banner-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 1;"></div>
+         <div class="container" style="position: relative; z-index: 2;">
             <div class="row">
                <div class="col-12">
                   <div class="page-banner-content text-center">
-                     <div class="page-banner-icon pulse-icon">
-                        <i class="fas fa-running"></i>
-                     </div>
+                   
                      <h1 class="page-banner-title">Student Life</h1>
                      <p class="page-banner-subtitle">Beyond the Classroom - Building Character & Skills</p>
                      <div class="breadcrumb-custom">
@@ -354,33 +351,6 @@
                <div class="col-lg-4 col-md-6">
                   <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
                      <div class="club-icon pulse-icon">
-                        <i class="fas fa-flask"></i>
-                     </div>
-                     <h4 class="club-title">Science Club</h4>
-                     <p class="club-description">Explore the wonders of science through experiments, projects, and science fairs.</p>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                  <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
-                     <div class="club-icon bounce-icon">
-                        <i class="fas fa-code"></i>
-                     </div>
-                     <h4 class="club-title">Computer Club</h4>
-                     <p class="club-description">Learn programming, web design, and digital skills for the future.</p>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                  <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-                     <div class="club-icon floating-shape">
-                        <i class="fas fa-newspaper"></i>
-                     </div>
-                     <h4 class="club-title">Debate Club</h4>
-                     <p class="club-description">Develop public speaking, critical thinking, and argumentation skills.</p>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-6">
-                  <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
-                     <div class="club-icon wiggle-icon">
                         <i class="fas fa-seedling"></i>
                      </div>
                      <h4 class="club-title">Eco Club</h4>
@@ -388,21 +358,48 @@
                   </div>
                </div>
                <div class="col-lg-4 col-md-6">
+                  <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
+                     <div class="club-icon bounce-icon">
+                        <i class="fas fa-book-reader"></i>
+                     </div>
+                     <h4 class="club-title">Literary Club</h4>
+                     <p class="club-description">Enhance language skills, creativity, and literary appreciation through reading, writing, and discussions.</p>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                  <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+                     <div class="club-icon floating-shape">
+                        <i class="fas fa-dumbbell"></i>
+                     </div>
+                     <h4 class="club-title">Physical and Wellness Club</h4>
+                     <p class="club-description">Promote physical fitness, health awareness, and overall wellness through various activities and programs.</p>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
+                  <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
+                     <div class="club-icon wiggle-icon">
+                        <i class="fas fa-calculator"></i>
+                     </div>
+                     <h4 class="club-title">Maths and IT Club</h4>
+                     <p class="club-description">Explore mathematical concepts and information technology through problem-solving, coding, and digital projects.</p>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6">
                   <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                      <div class="club-icon pulse-icon">
-                        <i class="fas fa-hands-helping"></i>
+                        <i class="fas fa-globe-americas"></i>
                      </div>
-                     <h4 class="club-title">Social Service Club</h4>
-                     <p class="club-description">Make a difference through community service and social awareness activities.</p>
+                     <h4 class="club-title">Social Science Club</h4>
+                     <p class="club-description">Understand society, history, geography, and civics through research, discussions, and field studies.</p>
                   </div>
                </div>
                <div class="col-lg-4 col-md-6">
                   <div class="club-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                      <div class="club-icon bounce-icon">
-                        <i class="fas fa-camera"></i>
+                        <i class="fas fa-flask"></i>
                      </div>
-                     <h4 class="club-title">Photography Club</h4>
-                     <p class="club-description">Capture moments and learn photography techniques and visual storytelling.</p>
+                     <h4 class="club-title">Science Club</h4>
+                     <p class="club-description">Explore the wonders of science through experiments, projects, and science fairs.</p>
                   </div>
                </div>
             </div>
@@ -423,33 +420,41 @@
                <div class="col-lg-3 col-md-6">
                   <div class="sport-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s">
                      <div class="sport-icon pulse-icon">
-                        <i class="fas fa-basketball-ball"></i>
+                        <i class="fas fa-volleyball-ball"></i>
                      </div>
-                     <h4 class="sport-title">Basketball</h4>
+                     <h4 class="sport-title">Volleyball</h4>
                   </div>
                </div>
                <div class="col-lg-3 col-md-6">
                   <div class="sport-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                      <div class="sport-icon bounce-icon">
-                        <i class="fas fa-table-tennis"></i>
+                        <i class="fas fa-futbol"></i>
                      </div>
-                     <h4 class="sport-title">Table Tennis</h4>
+                     <h4 class="sport-title">Football</h4>
                   </div>
                </div>
                <div class="col-lg-3 col-md-6">
                   <div class="sport-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
                      <div class="sport-icon floating-shape">
-                        <i class="fas fa-running"></i>
+                        <i class="fas fa-baseball-ball"></i>
                      </div>
-                     <h4 class="sport-title">Athletics</h4>
+                     <h4 class="sport-title">Cricket</h4>
                   </div>
                </div>
                <div class="col-lg-3 col-md-6">
                   <div class="sport-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                      <div class="sport-icon wiggle-icon">
-                        <i class="fas fa-volleyball-ball"></i>
+                        <i class="fas fa-table-tennis"></i>
                      </div>
-                     <h4 class="sport-title">Volleyball</h4>
+                     <h4 class="sport-title">Badminton</h4>
+                  </div>
+               </div>
+               <div class="col-lg-3 col-md-6">
+                  <div class="sport-card wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+                     <div class="sport-icon pulse-icon">
+                        <i class="fas fa-chess"></i>
+                     </div>
+                     <h4 class="sport-title">Indoor Games</h4>
                   </div>
                </div>
             </div>
@@ -1157,7 +1162,6 @@
                               <li><a href="admission.html">Admissions</a></li>
                               <li><a href="academics.html">Academics</a></li>
                               <li><a href="student-life.html">Student Life</a></li>
-                              <li><a href="news-events.html">News & Events</a></li>
                               <li><a href="contact.html">Contact Us</a></li>
                               <li><a href="about.html">About Us</a></li>
                            </ul>
@@ -1179,33 +1183,18 @@
                   </div>
                   <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 mb-4">
                      <div class="footer__widget mb-50 footer-col-4">
-                        <h3 class="footer__widget-title">Newsletter</h3>
+                        <h3 class="footer__widget-title">School Hours</h3>
                         <div class="footer__widget-content">
-                           <p style="margin-bottom: 20px; line-height: 1.7; color: #666;">
-                              Stay connected with us! Subscribe to receive updates about admissions, events, achievements, and important announcements.
-                           </p>
-                           <form class="footer-newsletter-form">
-                              <div class="footer-newsletter-input">
-                                 <input type="email" placeholder="Enter your email address" required>
-                                 <button type="submit"><i class="fas fa-paper-plane"></i></button>
-                              </div>
-                           </form>
-                           <p style="font-size: 13px; color: #999; margin-top: 12px; margin-bottom: 0;">
-                              <i class="fas fa-shield-alt" style="color: #4caf50; margin-right: 5px;"></i>We respect your privacy. Unsubscribe anytime.
-                           </p>
-                           <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid #e0e0e0;">
-                              <h5 style="font-size: 16px; font-weight: 700; margin-bottom: 15px; color: #333;">School Hours</h5>
-                              <ul style="list-style: none; padding: 0; margin: 0;">
-                                 <li style="margin-bottom: 8px; color: #666;">
-                                    <i class="fas fa-clock" style="color: #2c79ff; margin-right: 8px; width: 16px;"></i>
-                                    <strong>Monday - Friday:</strong> 9:00 AM - 4:00 PM
-                                 </li>
-                                 <li style="margin-bottom: 0; color: #666;">
-                                    <i class="fas fa-clock" style="color: #2c79ff; margin-right: 8px; width: 16px;"></i>
-                                    <strong>Saturday:</strong> 9:00 AM - 12:30 PM
-                                 </li>
-                              </ul>
-                           </div>
+                           <ul style="list-style: none; padding: 0; margin: 0;">
+                              <li style="margin-bottom: 8px; color: #666;">
+                                 <i class="fas fa-clock" style="color: #2c79ff; margin-right: 8px; width: 16px;"></i>
+                                 <strong>Monday - Friday:</strong> 9:00 AM - 4:00 PM
+                              </li>
+                              <li style="margin-bottom: 0; color: #666;">
+                                 <i class="fas fa-clock" style="color: #2c79ff; margin-right: 8px; width: 16px;"></i>
+                                 <strong>Saturday:</strong> 9:00 AM - 12:30 PM
+                              </li>
+                           </ul>
                         </div>
                      </div>
                   </div>
