--- a/academics.html
+++ b/academics.html
@@ -143,8 +143,8 @@
                         </div>
                      </div>
                      
-                     <div class="col-xxl-6 col-xl-6 col-lg-7 d-none d-lg-block">
-                        <div class="main-menu text-center">
+                     <div class="col-xxl-9 col-xl-9 col-lg-7 d-none d-lg-block">
+                        <div class="main-menu">
                            <nav id="mobile-menu" style="display: block;">
                               <ul>
                                  <li>
@@ -177,13 +177,6 @@
                      
                      <div class="col-xxl-3 col-xl-3 col-lg-2 col-md-6 col-6">
                         <div class="tp-header__main-right d-flex justify-content-end align-items-center w-100">
-                           <div class="tp-header__search d-none d-lg-block w-100">
-                              <form class="d-flex align-items-center w-100" id="header-search-form">
-                                 <input type="text" id="header-search-input" placeholder="Search..." class="form-control" style="flex: 1; width: auto;" autocomplete="off">
-                                 <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
-                              </form>
-                              <div id="search-results" class="search-results-dropdown" style="display: none;"></div>
-                           </div>
                            <div class="tp-header__hamburger ml-50 d-lg-none">
                               <button class="hamburger-btn offcanvas-open-btn">
                                  <span></span>
@@ -228,18 +221,6 @@
                </div>
             </div>
             <div class="mobile-menu fix mb-40"></div>
-
-
-            <div class="offcamvas__bottom">
-               <div class="offcanvas__cta mt-30 mb-20">
-                  <h3 class="offcanvas__cta-title">Contact info</h3>
-                  <span>27 Division St, New York,</span>
-                  <span>+154 4808 84082 4830</span>
-                  <span>support@noxia.com</span>
-                  <span>Office Hours: 8AM - 5PM</span>
-                  <span>Sunday - Wekend Day</span>
-               </div>
-            </div>
          </div>
       </div>
    </div>
