--- a/admission.html
+++ b/admission.html
@@ -164,8 +164,8 @@
                         </div>
                      </div>
                      
-                     <div class="col-xxl-6 col-xl-6 col-lg-7 d-none d-lg-block">
-                        <div class="main-menu text-center">
+                     <div class="col-xxl-9 col-xl-9 col-lg-7 d-none d-lg-block">
+                        <div class="main-menu">
                            <nav id="mobile-menu" style="display: block;">
                               <ul>
                                  <li>
@@ -198,13 +198,6 @@
                      
                      <div class="col-xxl-3 col-xl-3 col-lg-2 col-md-6 col-6">
                         <div class="tp-header__main-right d-flex justify-content-end align-items-center w-100">
-                           <div class="tp-header__search d-none d-lg-block w-100">
-                              <form class="d-flex align-items-center w-100" id="header-search-form">
-                                 <input type="text" id="header-search-input" placeholder="Search..." class="form-control" style="flex: 1; width: auto;" autocomplete="off">
-                                 <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
-                              </form>
-                              <div id="search-results" class="search-results-dropdown" style="display: none;"></div>
-                           </div>
                            <div class="tp-header__hamburger ml-50 d-lg-none">
                               <button class="hamburger-btn offcanvas-open-btn">
                                  <span></span>
@@ -249,18 +242,6 @@
                </div>
             </div>
             <div class="mobile-menu fix mb-40"></div>
-
-
-            <div class="offcamvas__bottom">
-               <div class="offcanvas__cta mt-30 mb-20">
-                  <h3 class="offcanvas__cta-title">Contact info</h3>
-                  <span>27 Division St, New York,</span>
-                  <span>+154 4808 84082 4830</span>
-                  <span>support@noxia.com</span>
-                  <span>Office Hours: 8AM - 5PM</span>
-                  <span>Sunday - Wekend Day</span>
-               </div>
-            </div>
          </div>
       </div>
    </div>
@@ -367,7 +348,7 @@
             </div>
             <div class="row">
                <div class="col-lg-6 mb-30">
-                  <div class="tp-vision-mission__item white-bg p-50 mb-30" style="border-top: 4px solid #2c79ff;">
+                  <div class="tp-vision-mission__item white-bg lg:p-50 p-20 mb-30" style="border-top: 4px solid #2c79ff;">
                      <div class="tp-vision-mission__icon mb-30 text-center" style="width: 80px; height: 80px; background: linear-gradient(135deg, #2c79ff 0%, #5392FB 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 30px;">
                         <span style="font-size: 36px; color: #fff;"><i class="fas fa-clipboard-check"></i></span>
                      </div>
