--- a/about.html
+++ b/about.html
@@ -175,8 +175,8 @@
                         </div>
                      </div>
 
-                     <div class="col-xxl-6 col-xl-6 col-lg-7 d-none d-lg-block">
-                        <div class="main-menu text-center">
+                     <div class="col-xxl-9 col-xl-9 col-lg-7 d-none d-lg-block">
+                        <div class="main-menu">
                            <nav id="mobile-menu" style="display: block;">
                               <ul>
                                  <li>
@@ -209,14 +209,6 @@
 
                      <div class="col-xxl-3 col-xl-3 col-lg-2 col-md-6 col-6">
                         <div class="tp-header__main-right d-flex justify-content-end align-items-center w-100">
-                           <div class="tp-header__search d-none d-lg-block w-100">
-                              <form class="d-flex align-items-center w-100" id="header-search-form">
-                                 <input type="text" id="header-search-input" placeholder="Search..." class="form-control"
-                                    style="flex: 1; width: auto;" autocomplete="off">
-                                 <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
-                              </form>
-                              <div id="search-results" class="search-results-dropdown" style="display: none;"></div>
-                           </div>
                            <div class="tp-header__hamburger ml-50 d-lg-none">
                               <button class="hamburger-btn offcanvas-open-btn">
                                  <span></span>
@@ -261,18 +253,6 @@
                </div>
             </div>
             <div class="mobile-menu fix mb-40"></div>
-
-
-            <div class="offcamvas__bottom">
-               <div class="offcanvas__cta mt-30 mb-20">
-                  <h3 class="offcanvas__cta-title">Contact info</h3>
-                  <span>27 Division St, New York,</span>
-                  <span>+154 4808 84082 4830</span>
-                  <span>support@noxia.com</span>
-                  <span>Office Hours: 8AM - 5PM</span>
-                  <span>Sunday - Wekend Day</span>
-               </div>
-            </div>
          </div>
       </div>
    </div>
@@ -308,14 +288,14 @@
       <!-- About Banner End -->
 
       <!-- About History Section Start -->
-      <section class="tp-about-2__section pt-120 pb-90 p-relative fix">
+      <section class="tp-about-2__section lg:pt-120 pt-60 lg:pb-90 pb-40 p-relative fix">
          <div class="container">
             <div class="row align-items-center">
                <div class="col-lg-6">
                   <div class="tp-about-2__left wow slideInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
                      <div class="tp-about-2__thumb">
                         <img src="./assets/images/girl.png" alt="Fazl E Omar Public School"
-                           style="border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+                          >
                      </div>
                   </div>
                </div>
