--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                         </div>
                      </div>
 
-                     <div class="col-xxl-6 col-xl-6 col-lg-7 d-none d-lg-block">
-                        <div class="main-menu text-center">
+                     <div class="col-xxl-9 col-xl-9 col-lg-7 d-none d-lg-block">
+                        <div class="main-menu">
                            <nav id="mobile-menu" style="display: block;">
                               <ul>
                                  <li>
@@ -231,14 +231,6 @@
 
                      <div class="col-xxl-3 col-xl-3 col-lg-2 col-md-6 col-6">
                         <div class="tp-header__main-right d-flex justify-content-end align-items-center w-100">
-                           <div class="tp-header__search d-none d-lg-block w-100">
-                              <form class="d-flex align-items-center w-100" id="header-search-form">
-                                 <input type="text" id="header-search-input" placeholder="Search..." class="form-control"
-                                    style="flex: 1; width: auto;" autocomplete="off">
-                                 <button type="submit" class="btn-search"><i class="fas fa-search"></i></button>
-                              </form>
-                              <div id="search-results" class="search-results-dropdown" style="display: none;"></div>
-                           </div>
                            <div class="tp-header__hamburger ml-50 d-lg-none">
                               <button class="hamburger-btn offcanvas-open-btn">
                                  <span></span>
@@ -284,18 +276,6 @@
                </div>
             </div>
             <div class="mobile-menu fix mb-40"></div>
-
-
-            <div class="offcamvas__bottom">
-               <div class="offcanvas__cta mt-30 mb-20">
-                  <h3 class="offcanvas__cta-title">Contact info</h3>
-                  <span>27 Division St, New York,</span>
-                  <span>+154 4808 84082 4830</span>
-                  <span>support@noxia.com</span>
-                  <span>Office Hours: 8AM - 5PM</span>
-                  <span>Sunday - Wekend Day</span>
-               </div>
-            </div>
          </div>
       </div>
    </div>
@@ -352,7 +332,7 @@
                                  and co-curricular activities.
                               </p>
                               <div class="tp-slider__btn-wrappper" data-animation="fadeInUp" data-delay="0.9s">
-                                 <a href="#academics" class="tp-transparent-btn">
+                                 <a href="academics.html" class="tp-transparent-btn">
                                     <span>Learn More <i class="fas fa-arrow-right"></i></span>
                                  </a>
                               </div>
@@ -377,7 +357,7 @@
                                  teacher-student relationships.
                               </p>
                               <div class="tp-slider__btn-wrappper" data-animation="fadeInUp" data-delay="0.9s">
-                                 <a href="#student-life" class="tp-transparent-btn">
+                                 <a href="student-life.html" class="tp-transparent-btn">
                                     <span>Explore Campus <i class="fas fa-arrow-right"></i></span>
                                  </a>
                               </div>
@@ -411,7 +391,7 @@
                      </div>
                      <div class="tp-feature-2__content">
                         <h3 class="tp-feature-2__title">Admissions</h3>
-                        <p>Join FEOPS family. Registration fee ₹2000 for new admissions (UKG to 1st std exempted).</p>
+                        <p>Join FEOPS family. Registration fee ₹3000 for new admissions (UKG to 1st std exempted).</p>
                         <div class="tp-feature-2__wrapper">
                            <span><a href="admission.html"><i class="fas fa-arrow-right"></i></a></span>
                         </div>
